Added project files and renamed some pages
payment center, message received, payment received message and renamed Index.html to index.html

--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,14 @@
         <a href="about.html">About</a>
         <a href="contactus.html">Contact Us</a>
     </div>
-
-    
+<br/>
+    <div id="images">
+        <div id="content">
+             <div id="full-img">
     <a href="backpack.html">
         <img src="images/bag.jpg"></a>
+<br/>
+<div class="products">
     <br/><a href="speaker.html">
         <img src="images/bluetooth speaker.jpg"></a>
     <br/><a href="holder.html">
@@ -23,4 +27,5 @@
         <img src="images/lotion.jpg"></a>
     <br/><a href="snack.html">
         <img src="images/snack.jpg"></a>
-
+</div>
+</body>
