--- a/backpack.html
+++ b/backpack.html
@@ -9,11 +9,15 @@
                 <a href="about.html">About</a>
                 <a href="contactus.html">Contact Us</a>
             </div>
+            <br/>
+           
     <br/>   
 <h3 align="center">Volkano Smart Laptop Backpack<br/>
     :Product Code 000000000010109794</h3>
+<br/><br/><br/>
 <img src="images/bag.jpg">
-<br/>
+<br/><br/><br/>
+
 <h4>Price</h4>
 <p>R900.00</p>
 <h4>In stock</h4>
@@ -26,7 +30,6 @@
 <li>Laptop and tablet sleeves</li>
 <li>External USB Port and cable</li>
 </ul>
-<br/>
     <table border="0">
      <tr>
          <th>Product Information</th>
@@ -59,11 +62,9 @@
 
 
 
-
-
     </table>
     <br/>
-    <button>Buy Now</button>
+    <a class="button" href="payment.html">Buy Now</a>
 </body>
 
 
