--- a/snack.html
+++ b/snack.html
@@ -20,6 +20,7 @@
 <h4>Description</h4>
 <p>Beyond their taste and health benefits, these boiled egg snack packs are also super portable and can easily be made ahead of time. This makes them a great option to pack with you to work or school, or to keep in your fridge when you need something to satisfy your hunger. A snack that’s quick, tasty, and nutritious? Yes please! Make sure you try all flavors.</p>
 <br/>
+
     <table border="0">
      <tr>
          <th>Product Information</th>
@@ -61,7 +62,7 @@
 
     </table>
     <br/>
-    <button>Buy Now</button>
+    <a class="button" href="payment.html">Buy Now</a>
 </body>
 
 
