--- a/speaker.html
+++ b/speaker.html
@@ -12,6 +12,7 @@
     <br/>   
 <h3 align="center">Retro Wireless Speaker Mini Outdoor Subwoofer Radio Phonograph Card Audio<br/></h3>
 <img src="images/speaker.jpg">
+
 <br/>
 <h4>Price</h4>
 <p>R350.00</p>
@@ -65,7 +66,7 @@
 
     </table>
     <br/>
-    <button>Buy Now</button>
+    <a class="button" href="payment.html">Buy Now</a>
 </body>
 
 
