--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color: rgb(155, 190, 171);">
         <div id="nav-bar">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
