--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color: rgb(155, 190, 171);">
         <div id="nav-bar">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -20,19 +20,16 @@
 <br/>
 
 <form>
-     <label for="firstname">Name :</label>
-       <input type="text" id="firstname"/>
+       
+       <input type="text" placeholder="Please type in your name" id="firstname"/>
        <br/><br/>
-       <label for="lastname">Surname : </label>
-       <input type="text" id="lastname"/>
+       <input type="text" placeholder="Please type in your Surname" id="lastname"/>
        <br/><br/>
-       <label for="email">Email Address :</label>
-       <input type="text" id="email"/>
+       <input type="text" placeholder="Input your email address" id="email"/>
        <br/><br/>
-       <label for="message">Enter your comment :</label>
-       <input type="text" id="message"/>
+       <input type="text" placeholder="Type in your message" id="message"/>
 <br/>
-
+<a class="button" href="message-received.html">Submit</a>
 </form>
 
 
