--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div id="nav-bar">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contactus.html">Contact Us</a>
     </div>
