--- a/holder.html
+++ b/holder.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         </head>
             <div id="nav-bar">
-                <a href="Index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contactus.html">Contact Us</a>
             </div>
