--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<title>www.estolo.co.za</title>
 <head>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,6 +12,11 @@
         <a href="contactus.html">Contact Us</a>
     </div>
 <br/>
+<center>
+    <h1>eStolo</h1>
+    <h3>(estore)</h3>
+    </center>
+    <br/>
     <div id="images">
         <div id="content">
              <div id="full-img">
