--- a/message-received.html
+++ b/message-received.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>www.estolo.co.za</title>
     <body style="background-color: rgb(152, 235, 189);">
 <h3>THANK YOU</h3>
 <p>Your message has been received!</p>
