--- a/contactus.html
+++ b/contactus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>www.estolo.co.za</title>
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
